feat(react-wallet-provider): add useBeaconWallet to support taquito

--- a/examples/react-wallet-provider/package.json
+++ b/examples/react-wallet-provider/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@airgap/beacon-sdk": "^2.2.4",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@testing-library/jest-dom": "^5.11.4",
