--- a/packages/react-wallet-provider/package.json
+++ b/packages/react-wallet-provider/package.json
@@ -28,6 +28,8 @@
     "compile": "tsc --jsx react-jsx --declaration src/index.ts"
   },
   "peerDependencies": {
+    "@airgap/beacon-sdk": "^2.2.4",
+    "@taquito/beacon-wallet": "^8.1.1",
     "react": ">=16.8.0"
   },
   "devDependencies": {
@@ -42,13 +44,14 @@
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "react-dom": "^17.0.2",
+    "@airgap/beacon-sdk": "^2.2.4",
+    "@taquito/beacon-wallet": "^8.1.1",
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.45.2",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-visualizer": "^5.4.1",
     "ts-jest": "^26.5.5"
-  },
-  "dependencies": {
-    "@airgap/beacon-sdk": "^2.2.4"
   },
   "jest": {
     "clearMocks": true,
