--- a/packages/react-wallet-provider/package.json
+++ b/packages/react-wallet-provider/package.json
@@ -2,6 +2,9 @@
   "name": "@tezos-contrib/react-wallet-provider",
   "version": "0.0.1",
   "description": "Provider for tezos wallet for react apps",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "react",
     "tezos",
