--- a/packages/react-wallet-provider/package.json
+++ b/packages/react-wallet-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tezos-contrib/react-wallet-provider",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Provider for tezos wallet for react apps",
   "publishConfig": {
     "access": "public"
@@ -37,8 +37,10 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@airgap/beacon-sdk": "^2.2.4",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@taquito/beacon-wallet": "^8.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.2",
@@ -48,8 +50,6 @@
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "react-dom": "^17.0.2",
-    "@airgap/beacon-sdk": "^2.2.4",
-    "@taquito/beacon-wallet": "^8.1.1",
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.45.2",
     "rollup-plugin-analyzer": "^4.0.0",
