--- a/packages/react-wallet-provider/package.json
+++ b/packages/react-wallet-provider/package.json
@@ -37,17 +37,17 @@
   },
   "peerDependencies": {
     "@airgap/beacon-sdk": "^2.2.6",
-    "@taquito/beacon-wallet": "^9.0.0",
+    "@taquito/beacon-wallet": ">=9.0.0",
     "react": ">=16.8.0"
   },
   "devDependencies": {
     "@airgap/beacon-sdk": "^2.2.6",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@taquito/beacon-wallet": "^9.0.0",
+    "@taquito/beacon-wallet": "^9.0.1",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/react-hooks": "^5.1.2",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.0",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
