fix: wallet connection issues

--- a/examples/react-wallet-provider/package.json
+++ b/examples/react-wallet-provider/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@airgap/beacon-sdk": "^2.2.4",
+    "@airgap/beacon-sdk": "^2.2.7",
+    "@taquito/beacon-wallet": "^9.0.1",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@tz-contrib/react-wallet-provider": "^1.0.0-alpha.0",
+    "@tz-contrib/react-wallet-provider": "^1.0.0-alpha.5",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
