--- a/packages/react-wallet-provider/package.json
+++ b/packages/react-wallet-provider/package.json
@@ -36,7 +36,7 @@
     "prepare": "yarn build"
   },
   "peerDependencies": {
-    "@airgap/beacon-sdk": "^2.2.6",
+    "@airgap/beacon-sdk": ">=2.2.6",
     "@taquito/beacon-wallet": ">=9.0.0",
     "react": ">=16.8.0"
   },
