--- a/packages/nft-hooks/package.json
+++ b/packages/nft-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-hooks",
+  "name": "@tezos-contrib/nft-hooks",
   "version": "0.0.1",
   "description": "React hooks for fetching NFTs on Tezos",
   "keywords": [
@@ -17,6 +17,7 @@
   "license": "MIT",
   "main": "dist/nft-hooks.umd.js",
   "module": "dist/nft-hooks.es.js",
+  "typings": "dist/index.d.ts",
   "directories": {
     "lib": "src",
     "test": "__tests__"
@@ -84,5 +85,9 @@
   },
   "ts-jest": {
     "isolatedModules": false
+  },
+  "dependencies": {
+    "@airgap/beacon-sdk": "^2.3.1",
+    "@tezos-contrib/react-wallet-provider": "^1.0.0-alpha.11"
   }
 }
