--- a/packages/nft-hooks/package.json
+++ b/packages/nft-hooks/package.json
@@ -43,13 +43,13 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@taquito/taquito": "^10.1.0",
-    "@taquito/utils": "^10.1.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -88,9 +88,5 @@
   },
   "ts-jest": {
     "isolatedModules": false
-  },
-  "dependencies": {
-    "@airgap/beacon-sdk": "^2.3.1",
-    "@tezos-contrib/react-wallet-provider": "^1.0.0-alpha.12"
   }
 }
